--- a/config/FAST_GITHUB_Full_No_AdblockPlus.ini
+++ b/config/FAST_GITHUB_Full_No_AdblockPlus.ini
@@ -10,6 +10,8 @@ ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Game.yaml,86400
 ruleset=Netflix,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
 ruleset=Spotify,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube%20Music.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
@@ -23,6 +25,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20News.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/BBC%20iPlayer.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Blizzard.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Discovery%20Plus.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Disney%20Plus.yaml,86400
@@ -36,6 +39,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml,86400
@@ -44,7 +48,6 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
-ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
