--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -5,29 +5,37 @@
 ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Special.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/LAN.yaml,86400
+
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Microsoft.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/PayPal.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Game.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
+
+ruleset=Netflix,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
+ruleset=Spotify,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube%20Music.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
+
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Tencent%20Video.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/WeTV.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Youku.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Tencent%20Video.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/WeTV.yaml,86400
+ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Youku.yaml,86400
+
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ABC.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Abema%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20News.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/BBC%20iPlayer.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Blizzard.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Discovery%20Plus.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Disney%20Plus.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/F1%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Fox%20Now.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Fox%2B.yaml,86400
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Google.yaml,86400
@@ -36,18 +44,20 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml,86400
+ruleset=Niconico,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/PBS.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pornhub.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
-ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
+
+ruleset=Bahamut,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
+
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Developer.yaml,86400
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/EHantai.yaml,86400
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Proxy.yaml,86400
@@ -55,7 +65,7 @@ ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzca
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Telegram.yaml,86400
 ruleset=Speedtest,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Speedtest.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Domestic.yaml,86400
-ruleset=DIRECT,[]GEOIP,CN
+ruleset=Domestic,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
 
@@ -65,47 +75,30 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=AsianTV`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
+
+custom_proxy_group=Netflix`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
+custom_proxy_group=Spotify`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
 custom_proxy_group=YouTube`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
+custom_proxy_group=Niconico`select``[]GlobalTV`[]IEPL-JP-select`[]JP-Detour-select`(JP)
+custom_proxy_group=Bahamut`select``[]GlobalTV`[]TW-Detour-select`(TW)
+
 custom_proxy_group=GlobalTV`select``[]Proxy`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
 custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 
-custom_proxy_group=IEPL-JP-select`select`[]IEPL-JP`(SZ-JP)
-custom_proxy_group=IEPL-JP`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=IEPL-SG-select`select`[]IEPL-SG`(SZ-SG)
-custom_proxy_group=IEPL-SG`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=JP-Detour-select`select`[]JP-Detour`(JP-Detour)
-custom_proxy_group=JP-Detour`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=TW-Detour-select`select`[]TW-Detour`(TW-Detour)
-custom_proxy_group=TW-Detour`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=IEPL-HK-select`select`[]IEPL-HK`(SZ-HK)
-custom_proxy_group=IEPL-HK`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=HKT-Detour-select`select`[]HKT-Detour`(HKT-Detour)
-custom_proxy_group=HKT-Detour`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=IEPL-US-select`select`[]IEPL-US`(SZ-US)
-custom_proxy_group=IEPL-US`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=LA-Detour-select`select`[]LA-Detour`(LA-Detour)
-custom_proxy_group=LA-Detour`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=UK-select`select`[]UK`(UK)
-custom_proxy_group=UK`url-test`(UK)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=DE-Detour-select`select`[]DE-Detour`(DE-Detour)
-custom_proxy_group=DE-Detour`url-test`(DE-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=SG-Detour-select`select`[]SG-Detour`(SG-Detour)
-custom_proxy_group=SG-Detour`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
-
-custom_proxy_group=Oz-Detour-select`select`[]Oz-Detour`(Oz-Detour)
-custom_proxy_group=Oz-Detour`url-test`(Oz-Detour)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=IEPL-JP-select`select`(SZ-JP)
+custom_proxy_group=IEPL-SG-select`select`(SZ-SG)
+custom_proxy_group=JP-Detour-select`select`(JP-Detour)
+custom_proxy_group=TW-Detour-select`select`(TW-Detour)
+custom_proxy_group=IEPL-HK-select`select`(SZ-HK)
+custom_proxy_group=HKT-Detour-select`select`(HKT-Detour)
+custom_proxy_group=IEPL-US-select`select`(SZ-US)
+custom_proxy_group=LA-Detour-select`select`(LA-Detour)
+custom_proxy_group=UK-select`select`(UK)
+custom_proxy_group=DE-Detour-select`select`(DE-Detour)
+custom_proxy_group=SG-Detour-select`select`(SG-Detour)
+custom_proxy_group=Oz-Detour-select`select`(Oz-Detour)
 
 enable_rule_generator=true
 overwrite_original_rules=true
