--- a/Rules-Complete/Provider/Media/GlobalTV/Abema TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Abema TV.yaml
@@ -2,9 +2,11 @@ payload:
   # > AbemaTV
   # - USER-AGENT,AbemaTV*
   - PROCESS-NAME,tv.abema
+
+  - DOMAIN-KEYWORD,abematv.akamaized.net
+  
   - DOMAIN-SUFFIX,abema.io
   - DOMAIN-SUFFIX,abema.tv
-  - DOMAIN-SUFFIX,akamaized.net
   - DOMAIN-SUFFIX,ameba.jp
   - DOMAIN-SUFFIX,hayabusa.io
-  - DOMAIN-KEYWORD,abematv.akamaized.net
+  - DOMAIN,abematv.akamaized.net
