更新我的规则

--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -77,8 +77,8 @@ custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=AsianTV`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
 
 custom_proxy_group=Netflix`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
-custom_proxy_group=Spotify`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
-custom_proxy_group=YouTube`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
+custom_proxy_group=Spotify`select``[]GlobalTV`.*
+custom_proxy_group=YouTube`select``[]GlobalTV`.*
 custom_proxy_group=Niconico`select``[]GlobalTV`[]IEPL-JP-select`[]JP-Detour-select`(JP)
 custom_proxy_group=Bahamut`select``[]GlobalTV`[]TW-Detour-select`(TW)
 
