--- a/config/FAST_GITHUB_Full_AdblockPlus.ini
+++ b/config/FAST_GITHUB_Full_AdblockPlus.ini
@@ -40,7 +40,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
+; ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml,86400
