--- a/config/GITHUB_Full_No_AdblockPlus.ini
+++ b/config/GITHUB_Full_No_AdblockPlus.ini
@@ -39,7 +39,7 @@ ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/ma
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml,86400
-ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
+; ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/MOO.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml,86400
