--- a/Rules-Complete/Rule FastGit CDN.yaml
+++ b/Rules-Complete/Rule FastGit CDN.yaml
@@ -39,7 +39,7 @@ rules:
   - RULE-SET,Japonx,GlobalTV
   - RULE-SET,JOOX,GlobalTV
   - RULE-SET,Line TV,GlobalTV
-  - RULE-SET,MOO,GlobalTV
+  # - RULE-SET,MOO,GlobalTV
   - RULE-SET,myTV SUPER,GlobalTV
   - RULE-SET,Niconico,GlobalTV
   - RULE-SET,Pandora,GlobalTV
@@ -259,12 +259,12 @@ rule-providers:
     path: ./Rules/Microsoft
     type: http
     url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Microsoft.yaml'
-  MOO:
-    behavior: classical
-    interval: 86400
-    path: ./Rules/Media/GlobalTV/MOO
-    type: http
-    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/MOO.yaml'  
+  # MOO:
+  #   behavior: classical
+  #   interval: 86400
+  #   path: ./Rules/Media/GlobalTV/MOO
+  #   type: http
+  #   url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/MOO.yaml'  
   Netease Music:
     behavior: classical
     interval: 86400
