--- a/config/GITHUB_Full_AdblockPlus.ini
+++ b/config/GITHUB_Full_AdblockPlus.ini
@@ -69,9 +69,9 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
 custom_proxy_group=Others`select`[]Proxy`[]DIRECT
 custom_proxy_group=AsianTV`select`[]DIRECT`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
-custom_proxy_group=YouTube`select`[]GlobalTV.*
-custom_proxy_group=Netflix`select`[]GlobalTV.*
-custom_proxy_group=Spotify`select`[]GlobalTV.*
+custom_proxy_group=YouTube`select`[]GlobalTV`.*
+custom_proxy_group=Netflix`select`[]GlobalTV`.*
+custom_proxy_group=Spotify`select`[]GlobalTV`.*
 custom_proxy_group=GlobalTV`select`[]Proxy`.*
 custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
 custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
