--- a/FakeIP-Config.yaml
+++ b/FakeIP-Config.yaml
@@ -108,7 +108,13 @@ dns:
   use-hosts: true
   # 国内用下列DNS解析
   nameserver:
+    - udp://223.5.5.5
+    - udp://180.76.76.76
+    - udp://1.2.4.8
+    - udp://210.2.4.8
     - tcp://114.114.114.114
+    - tls://1.12.12.12
+    - tls://120.53.53.53
     - tls://dns.alidns.com
     - tls://dot.pub
     - tls://dot.360.cn
@@ -116,10 +122,9 @@ dns:
     - https://223.6.6.6/dns-query
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
+    - https://1.12.12.12/dns-query
+    - https://120.53.53.53/dns-query
     - https://doh.360.cn/dns-query
-    - https://sm2.doh.pub/dns-query
-    - https://rubyfish.cn/dns-query
-    - https://dns.rubyfish.cn/dns-query
       # ipv6的DNS
     # - "[2400:3200::1]:53"
     # - "[2400:3200:baba::1]:53"
@@ -151,21 +156,21 @@ dns:
     - https://dns.google/dns-query
     - https://dns.google/resolve
     - https://dns.quad9.net/dns-query
-    - https://dns11.quad9.net/dns-query
     - https://doh.opendns.com/dns-query
-    - https://doh.familyshield.opendns.com/dns-query
     - https://1.1.1.1/dns-query
     - https://1.0.0.1/dns-query
     - https://cloudflare-dns.com/dns-query
     - https://dns.adguard.com/dns-query
-    - https://dns-family.adguard.com/dns-query
     - https://doh.dns.sb/dns-query
     - https://doh.sb/dns-query
-    - https://doh.cleanbrowsing.org/doh/family-filter/
     - https://public.dns.iij.jp/dns-query
     - https://doh-jp.blahdns.com/dns-query
-    - https://public.dns.iij.jp/dns-query
-    - https://doh-jp.blahdns.com/dns-query
+    # 带家庭保护或者安全的DNS
+    # - tls://dns.cleanbrowsing.org
+    # - https://dns11.quad9.net/dns-query
+    # - https://doh.familyshield.opendns.com/dns-query
+    # - https://dns-family.adguard.com/dns-query
+    # - https://doh.cleanbrowsing.org/doh/family-filter/
       # ipv6的DNS
     # - https://[2001:4860:4860::64]/dns-query
     # - https://[2001:4860:4860::6464]/dns-query
