--- a/Rules-Complete/Rule jsDelivr CDN.yaml
+++ b/Rules-Complete/Rule jsDelivr CDN.yaml
@@ -112,7 +112,7 @@ rule-providers:
   Blizzard:
     behavior: classical
     interval: 86400
-    path: ./Rules/Media/Blizzard
+    path: ./Rules/Media/GlobalTV/Blizzard
     type: http
     url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Blizzard.yaml'
   Bahamut:
